# CPI

./: .gitignore  CMakeLists.txt  setup.py
include/: libcpi.h
lib/: CMakeLists.txt  libcpi.c
llvm-project/llvm/include/llvm/Transforms/Instrumentation/: CPI.h
llvm-project/llvm/lib/Passes/: PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
llvm-project/llvm/lib/Transforms/Instrumentation/: CMakeLists.txt  CPI.cpp
manual_test/: Makefile
manual_test/lib/: libcpi.c
unittest/: CMakeLists.txt  ut_test.c
